tests/semantic/witness_check/witness_check.err
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 34
a(x,y) :- y = count : { c(x,_) }.
--------------------------^-------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 35
a(x,y) :- y = sum z : { c(x,z) }.
--------------------------^-------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 42
a(x,y) :- b(x), x = sum z : { c(y, z) }.
--------------------------------^--------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 45
a(x, y) :- b(x+1), y = count : { c(x, _) }.
-----------------------------------^--------
Error: Ungrounded variable r in file witness_check.dl at line 52
a(x,y) :- b(x), y = max z : { !d(r), !e(m), c(x,z), m = sum j : { c(r,j) } }.
---------------------------------^--------------------------------------------
Warning: Variable r only occurs once in file witness_check.dl at line 52
a(x,y) :- b(x), y = max z : { !d(r), !e(m), c(x,z), m = sum j : { c(r,j) } }.
---------------------------------^--------------------------------------------
Warning: Variable r0 only occurs once in file witness_check.dl at line 52
a(x,y) :- b(x), y = max z : { !d(r), !e(m), c(x,z), m = sum j : { c(r,j) } }.
--------------------------------------------------------------------^---------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 55
a(x,y) :- y = sum z : { c(z,m), m = count : { e(x) } }.
------------------------------------------------^-------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 58
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
----------------------------------^--------------------------------------
Error: Witness problem: argument grounded by an aggregator's inner scope is used ungrounded in outer scope in a count/sum/mean aggregate in file witness_check.dl at line 58
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
-----------------------------------------^-------------------------------
Error: Ungrounded variable m in file witness_check.dl at line 58
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
-------------------------------------------^-----------------------------
Warning: Variable m only occurs once in file witness_check.dl at line 58
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
-------------------------------------------^-----------------------------
Warning: Variable m0 only occurs once in file witness_check.dl at line 58
a(x,y) :- b(x), x = sum z : { c(z,y), !c(y,m), z = sum j : { c(j,m) } }.
-----------------------------------------------------------------^-------
9 errors generated, evaluation aborted
